[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://src/UI/playerList.gd" type="Script" id=2]
[ext_resource path="res://src/UI/PlayerName.gd" type="Script" id=3]
[ext_resource path="res://src/UI/playerList.tscn" type="PackedScene" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NetworkSelectionPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.0
margin_top = -137.0
margin_right = 143.0
margin_bottom = 137.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="LineEdit" parent="NetworkSelectionPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.1629
margin_top = 29.9706
margin_right = 64.8371
margin_bottom = 53.9706
text = "zoubida"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="NetworkSelectionPanel/PlayerName"]

[node name="port" type="LineEdit" parent="NetworkSelectionPanel"]
anchor_top = 0.667
anchor_bottom = 0.667
margin_left = 46.0154
margin_top = -10.7371
margin_right = 121.016
margin_bottom = 13.2629
text = "25565"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NetworkSelectionPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -42.1674
margin_top = 7.34163
margin_right = 40.8326
margin_bottom = 21.3416
text = "Player name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="NetworkSelectionPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -129.732
margin_top = 135.854
margin_right = -46.7319
margin_bottom = 149.854
text = "IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="NetworkSelectionPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.032
margin_top = 179.321
margin_right = -53.0316
margin_bottom = 193.321
text = "Port:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverIP" type="LineEdit" parent="NetworkSelectionPanel"]
anchor_top = 0.544
anchor_bottom = 0.544
margin_left = 47.3879
margin_top = -14.5758
margin_right = 162.388
margin_bottom = 9.42416
text = "192.168.1.27"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="NetworkSelectionPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = 38.0
margin_right = 129.0
margin_bottom = 58.0
text = "Host a server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="NetworkSelectionPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 31.0
margin_right = 130.0
margin_bottom = 20.0
text = "Join a server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreGameServerPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.5
margin_top = -137.0
margin_right = 81.5
margin_bottom = 137.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select level" type="Button" parent="PreGameServerPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.0842
margin_top = -28.0229
margin_right = 44.9158
margin_bottom = -8.02292
text = "Select level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PreGameServerPanel"]
margin_left = 21.0
margin_top = 13.0
margin_right = 143.0
margin_bottom = 27.0
text = "Connected Players:"

[node name="VBoxContainer" type="VBoxContainer" parent="PreGameServerPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.4977
margin_top = -105.312
margin_right = 63.5023
margin_bottom = 63.6877
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreGameClientPanel" parent="." instance=ExtResource( 4 )]
[connection signal="request_completed" from="NetworkSelectionPanel/PlayerName/HTTPRequest" to="NetworkSelectionPanel/PlayerName" method="_on_HTTPRequest_request_completed"]
[connection signal="text_changed" from="NetworkSelectionPanel/port" to="." method="_on_port_text_changed"]
[connection signal="pressed" from="NetworkSelectionPanel/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="NetworkSelectionPanel/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="PreGameServerPanel/Select level" to="." method="_on_Select_Level_pressed"]
